# misfits

./: .gitignore  PROJECT_INTENT.md  README.md  REPO_OVERVIEW.md  main.py  pyproject.toml  report.py  visualize.py
models/: __init__.py  comparison.md
models/gpt2/: __init__.py  analyze.py  generate_layer_value_distribution_report.py  gpt2_layer_value_distribution_data.json  gpt2_layer_value_distribution_report.md  gpt2_weight_outlier_analysis.md  model.py
models/llama-3.2-1b/: analysis_data.json  analyze.py  llama_3_2_1b_weight_outlier_analysis.md  llama_3_2_1b_weight_outlier_analysis_summary.json  visualize_llama.py
models/qwen3.5-0.8b/: analyze.py  qwen3_5_0_8b_weight_outlier_analysis.md  qwen3_5_0_8b_weight_outlier_analysis_summary.json  visualize_qwen.py
shared/: __init__.py  io.py  report.py  stats.py  viz.py
src/: analyze.py  run.py
